# google-mcp-custom

.github/workflows/: docs.yaml
calendar/: README.md
docs/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docs/app/: server.py
docs/app/apis/: documents.py  helper.py
docs/tests/: test_server.py
drive/: README.md  docker-compose.yml  pyproject.toml
drive/app/: server.py
drive/app/apis/: files.py
gmail/: README.md  docker-compose.yml  pyproject.toml
gmail/obot_gmail_mcp/: server.py
gmail/obot_gmail_mcp/apis/: messages.py
gmail/tests/: test_forward_message.py
sheets/: README.md  docker-compose.yml
slides/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
slides/app/: server.py
slides/app/apis/: helper.py  presentations.py
